# itk_picture_analysis

./: README.md
CompositeFilter/: CompositeFilter.cpp
ItkVtkGlueBin/: CMakeCache.txt  ItkVtkGlueConfig.cmake  UseItkVtkGlue.cmake  cmake_install.cmake
ItkVtkGlueBin/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
ItkVtkGlueBin/ItkVtkGlue.build/Debug/ALL_BUILD.build/: Script-9B134A2CA804429B968B8D2E.sh  dgph
ItkVtkGlueBin/ItkVtkGlue.build/Debug/ItkVtkGlue.build/: dgph
ItkVtkGlueBin/ItkVtkGlue.build/Debug/ZERO_CHECK.build/: Script-F63F82C5B40344CC8966D3D0.sh  dgph
ItkVtkGlueBin/ItkVtkGlue.xcodeproj/: project.pbxproj
ItkVtkGlueBin/ItkVtkGlue.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PictureAnalysis/: CMakeLists.txt  PictureAnalysis.cxx  composite_registration.cpp  composite_registration.h  registration_mutual_information.cpp  registration_mutual_information.h  registration_one.cpp  registration_one.h  registration_two.cpp  registration_two.h
PictureAnalysis/CompositeFilter/: CMakeLists.txt  CompositeFilter.cpp  CompositeFilter.h  CompositeRegistration.h
PictureAnalysis/composite_registration/: CMakeLists.txt
PictureAnalysis/composite_registration_bin/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
PictureAnalysis/composite_registration_bin/Project.build/Debug/ZERO_CHECK.build/: Script-926320BB71444CCEBC4BDC2F.sh
PictureAnalysis/composite_registration_bin/Project.build/Debug/composite_registration.build/: dgph
PictureAnalysis/composite_registration_bin/Project.xcodeproj/project.xcworkspace/xcshareddata/: Project.xccheckout
PictureAnalysis/composite_registration_bin/Project.xcodeproj/project.xcworkspace/xcuserdata/matthew.xcuserdatad/: UserInterfaceState.xcuserstate
PictureAnalysisBin/: CMakeCache.txt  cmake_install.cmake
PictureAnalysisBin/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
PictureAnalysisBin/CompositeFilter/: cmake_install.cmake
PictureAnalysisBin/Debug/: demons_registration.tif  test.tif
PictureAnalysisBin/composite_registration/: cmake_install.cmake
PictureAnalysisBin/pictureAnalysis.build/Debug/ALL_BUILD.build/: Script-C5F16BC43E624949B78AA690.sh  dgph
PictureAnalysisBin/pictureAnalysis.build/Debug/PictureAnalysis.build/: dgph
PictureAnalysisBin/pictureAnalysis.build/Debug/ZERO_CHECK.build/: Script-C6F97F3764E64C05B97B26B0.sh  dgph
PictureAnalysisBin/pictureAnalysis.xcodeproj/: project.pbxproj
PictureAnalysisBin/pictureAnalysis.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
composite_registration_bin/: CMakeCache.txt  cmake_install.cmake
composite_registration_bin/CMakeScripts/: ReRunCMake.make
composite_registration_bin/Project.build/Debug/ALL_BUILD.build/: dgph  (+1 more)
composite_registration_bin/Project.xcodeproj/: project.pbxproj
(+41 files in other folders)
